--- a/Alaa_gait-analysis-dataset_8.ipynb
+++ b/Alaa_gait-analysis-dataset_8.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "id": "12d9146c",
    "metadata": {
     "id": "12d9146c"
@@ -100,7 +100,7 @@
     "    if (group == \"test\"):\n",
     "        for y in range(332):\n",
     "            fileNamesX.append(str(y+1)+'.txt')\n",
-    "        for x in range(1022):\n",
+    "        for y in range(332):\n",
     "            fileNamesY.append(str(y+1)+'_label.txt')\n",
     "\n",
     "    #filenames += [\"acc_x1.txt\",\"acc_x2.txt\",\"acc_y1.txt\",\"acc_y2.txt\",\"acc_z1.txt\",\"acc_z2.txt\"]\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "id": "e46b3e4e",
    "metadata": {
     "id": "e46b3e4e"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "id": "20534ee9",
    "metadata": {
     "id": "20534ee9",
@@ -154,8 +154,8 @@
      "output_type": "stream",
      "text": [
       "(1024, 6, 1022) (1024, 1, 1022)\n",
-      "(1024, 6, 332) (1024, 1, 1022)\n",
-      "(1024, 6, 1022) (1024, 1, 1022, 1) (1024, 6, 332) (1024, 1, 1022, 1)\n"
+      "(1024, 6, 332) (1024, 1, 332)\n",
+      "(1024, 6, 1022) (1024, 1, 1022, 1) (1024, 6, 332) (1024, 1, 332, 1)\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "id": "5b6cee64",
    "metadata": {
     "id": "5b6cee64",
@@ -262,7 +262,7 @@
        "         -5.42578e+00,  9.43359e-01]]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "id": "27cd4b5f",
    "metadata": {
     "id": "27cd4b5f"
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "id": "8eaf8604",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "id": "6c008d35",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "id": "0d89f0ad",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "id": "aa9db0fd",
    "metadata": {},
    "outputs": [
