--- a/READ DATASET_2 nada.ipynb
+++ b/READ DATASET_2 nada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "8710ce52",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8b936d67",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "870892a4",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "98bce5c1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5e9bfaae",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "5d7b57ef",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "4d5a1a18",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "         -1.36781e-01,  1.10275e-01]]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "a1ade9ad",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "1874711c",
    "metadata": {},
    "outputs": [
@@ -339,10 +339,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7a09ca11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 2.53666e+00 -1.59933e+01 -3.92266e+01 -1.54250e+00 -4.91300e+00\n",
+      "   -3.51537e-01]\n",
+      "  [ 4.65414e+00 -2.09487e+01 -2.12340e+01 -1.42763e+00 -1.50686e+00\n",
+      "   -2.96327e-01]\n",
+      "  [ 2.49596e+00 -1.93636e+01 -5.88592e+00 -1.95509e-01  3.55619e+00\n",
+      "   -2.31096e-01]\n",
+      "  ...\n",
+      "  [ 3.14905e+00 -5.86665e+00  1.25969e+00  4.88224e-01  7.49763e-02\n",
+      "    3.36723e-02]\n",
+      "  [ 3.49419e+00 -6.89351e+00  7.49086e-01  4.81583e-01  3.68066e-01\n",
+      "    2.07943e-01]\n",
+      "  [ 4.54128e+00 -8.50974e+00 -1.08700e+00  6.16846e-01  3.64054e-01\n",
+      "    1.45092e-01]]\n",
+      "\n",
+      " [[-6.85819e+00 -2.49667e+01 -1.75256e+01 -1.26447e+00 -1.20481e+00\n",
+      "    5.32632e-01]\n",
+      "  [-3.06619e+00 -2.11356e+01 -1.22480e+01 -2.46933e-01  3.70903e-01\n",
+      "   -7.82179e-01]\n",
+      "  [-1.17608e+00 -1.48205e+01 -1.01156e+01  4.70814e-01  5.90606e-01\n",
+      "   -6.31069e-01]\n",
+      "  ...\n",
+      "  [-3.93584e-01 -3.50272e+00 -4.35098e+00  8.65519e-01 -1.96699e-01\n",
+      "    1.36221e-01]\n",
+      "  [-1.05659e+00 -5.65039e+00 -6.57193e+00  1.14200e-01 -2.89153e-01\n",
+      "    1.85739e-01]\n",
+      "  [-2.08812e+00 -9.21618e+00 -8.90000e+00 -8.74166e-01  4.71795e-02\n",
+      "    2.11646e-01]]\n",
+      "\n",
+      " [[-2.86466e+00 -1.41928e+01 -8.34140e+00 -9.22519e-01  2.38619e-01\n",
+      "    1.20375e-01]\n",
+      "  [-5.22542e+00 -1.09642e+01  1.62794e+00  4.03943e-01  2.46767e-01\n",
+      "    3.71211e-01]\n",
+      "  [-4.26968e+00 -6.98733e+00  1.47984e+00  8.53676e-01  1.00201e-02\n",
+      "    5.70632e-01]\n",
+      "  ...\n",
+      "  [ 8.67936e-01 -6.66995e+00 -4.87964e+00 -1.33766e-01  3.04183e-01\n",
+      "    1.26958e-01]\n",
+      "  [ 3.50002e-01 -7.89705e+00 -5.04698e+00 -1.40931e-01  3.75589e-01\n",
+      "   -6.34164e-02]\n",
+      "  [-1.13523e+00 -1.03565e+01 -6.02471e+00 -7.30289e-02 -4.26489e-01\n",
+      "   -2.10032e-01]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[ 1.96803e+00  1.70850e+01  1.55288e+01 -1.14843e-01 -7.20821e-01\n",
+      "    8.42994e-02]\n",
+      "  [ 3.19553e+00  1.69613e+01  1.15831e+01 -3.27309e-01  1.98698e-01\n",
+      "    2.17091e-01]\n",
+      "  [ 4.61322e+00  1.17347e+01  3.84595e+00  1.03188e-01  4.28684e-01\n",
+      "    1.94522e-01]\n",
+      "  ...\n",
+      "  [ 1.24779e+00  7.86804e+00  5.44978e+00 -2.27328e-01  8.79837e-02\n",
+      "    2.38848e-01]\n",
+      "  [ 2.17386e-01  6.14345e+00  4.52579e+00 -1.51323e-01  6.26108e-01\n",
+      "   -7.78662e-02]\n",
+      "  [ 3.31017e-01  1.04573e+01 -1.25177e+00  1.94408e-01  8.08170e-01\n",
+      "   -3.73053e-01]]\n",
+      "\n",
+      " [[ 1.19877e+01 -2.58527e+00  6.07094e+00 -5.06927e-01  3.81699e-01\n",
+      "   -3.61221e-01]\n",
+      "  [ 1.24253e+01 -1.53810e+00  5.08630e+00 -3.84568e-01 -3.82367e-02\n",
+      "   -4.37473e-01]\n",
+      "  [ 1.19080e+01 -8.51941e-01  4.29962e+00 -1.96642e-01 -2.05618e-01\n",
+      "   -2.72667e-01]\n",
+      "  ...\n",
+      "  [ 9.22714e+00 -3.86748e+00  9.15269e+00  3.95349e-01  2.08294e-01\n",
+      "    5.96661e-02]\n",
+      "  [ 9.06471e+00 -3.47644e+00  9.12327e+00  1.22192e-01  2.46502e-01\n",
+      "   -2.24891e-02]\n",
+      "  [ 9.52042e+00 -2.86690e+00  9.01846e+00 -1.90761e-01  3.14606e-01\n",
+      "   -2.28138e-01]]\n",
+      "\n",
+      " [[ 7.56448e+00 -1.32208e+01 -9.43794e+00 -1.32412e+00 -1.40082e+00\n",
+      "   -4.81500e-01]\n",
+      "  [ 6.48679e+00 -1.45436e+01 -4.62919e+00 -2.84292e-02 -5.59530e-01\n",
+      "    2.36023e-01]\n",
+      "  [ 7.33045e+00 -1.22272e+01 -4.62380e+00  1.46740e-01  9.13597e-01\n",
+      "    8.26911e-02]\n",
+      "  ...\n",
+      "  [ 2.07877e+00 -7.17752e+00 -5.92415e+00  1.69510e-01 -2.65517e-01\n",
+      "   -1.70376e-01]\n",
+      "  [ 2.77129e+00 -8.22169e+00 -6.54335e+00 -2.20643e-01  3.52869e-01\n",
+      "   -3.15318e-01]\n",
+      "  [ 3.40126e+00 -1.04351e+01 -7.68569e+00 -8.01145e-01  9.91362e-01\n",
+      "   -4.53203e-01]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# save numpy array as npy file\n",
     "from numpy import asarray\n",
@@ -350,9 +442,60 @@
     "# define data\n",
     "#data = asarray([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
     "# save to npy file\n",
-    "save('trainX.npy', trainX)\n",
-    "#np.load(tranx.npy)"
+    "save('testX.npy', testX)\n",
+    "#np.load(tranx.npy)\n",
+    "# load numpy array from npy file\n",
+    "from numpy import load\n",
+    "# load array\n",
+    "testX = load('testX.npy')\n",
+    "# print the array\n",
+    "print(testX)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f452e868",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 1. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save numpy array as npy file\n",
+    "from numpy import asarray\n",
+    "from numpy import save\n",
+    "# define data\n",
+    "#data = asarray([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
+    "# save to npy file\n",
+    "save('testy.npy', testy)\n",
+    "#np.load(tranx.npy)\n",
+    "# load numpy array from npy file\n",
+    "from numpy import load\n",
+    "# load array\n",
+    "testy = load('testy.npy')\n",
+    "# print the array\n",
+    "print(testy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3625686d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
