--- a/READ DATASET_2 nada.ipynb
+++ b/READ DATASET_2 nada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 110,
    "id": "8710ce52",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 111,
+   "id": "6cc0c624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_normalize(data_temp):\n",
+    "    data_temp2=data_temp.T\n",
+    "    data_temp2 -=np.mean(data_temp2,axis=0)\n",
+    "    data_temp2 /=np.std(data_temp2,axis=0)\n",
+    "    data_temp=data_temp2.T\n",
+    "    return data_temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "id": "8b936d67",
    "metadata": {},
    "outputs": [],
@@ -39,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "id": "870892a4",
    "metadata": {},
    "outputs": [],
@@ -56,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "id": "98bce5c1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 115,
    "id": "5e9bfaae",
    "metadata": {},
    "outputs": [],
@@ -102,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 116,
    "id": "5d7b57ef",
    "metadata": {},
    "outputs": [
@@ -122,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 117,
    "id": "4d5a1a18",
    "metadata": {},
    "outputs": [
@@ -210,7 +225,7 @@
        "         -1.36781e-01,  1.10275e-01]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,21 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
    "id": "a1ade9ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define data\n",
-    "# save to npy file\n",
-    "save('trainX.npy', trainX)\n",
-    "#np.load(tranx.npy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1874711c",
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +333,10 @@
     }
    ],
    "source": [
+    "# define data\n",
+    "# save to npy file\n",
+    "save('trainX.npy', trainX)\n",
+    "#np.load(tranx.npy)\n",
     "# load array\n",
     "trainX = load('trainX.npy')\n",
     "# print the array\n",
@@ -339,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 119,
    "id": "7a09ca11",
    "metadata": {},
    "outputs": [
@@ -454,8 +460,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f452e868",
+   "execution_count": 120,
+   "id": "fea6e704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 1. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save numpy array as npy file\n",
+    "from numpy import asarray\n",
+    "from numpy import save\n",
+    "# define data\n",
+    "#data = asarray([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]])\n",
+    "# save to npy file\n",
+    "save('trainy.npy', trainy)\n",
+    "#np.load(tranx.npy)\n",
+    "# load numpy array from npy file\n",
+    "from numpy import load\n",
+    "# load array\n",
+    "trainy = load('trainy.npy')\n",
+    "# print the array\n",
+    "print(trainy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "06531575",
    "metadata": {},
    "outputs": [
     {
@@ -491,8 +534,229 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "id": "556ffaf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.25589738,  2.14123019, -0.81468756, -0.51246559,\n",
+       "          0.08664965, -0.64482932],\n",
+       "        [-0.20506804,  2.20934468, -0.600502  , -0.59359075,\n",
+       "         -0.27169112, -0.53849277],\n",
+       "        [-0.16623494,  2.17725158, -0.4164819 , -0.46472322,\n",
+       "         -0.88449895, -0.24531257],\n",
+       "        ...,\n",
+       "        [-0.19583188,  2.11736926,  0.12735078, -0.81029298,\n",
+       "         -0.48047156, -0.75812363],\n",
+       "        [-0.16385302,  2.13159927,  0.09332563, -0.67241844,\n",
+       "         -0.64741539, -0.74123804],\n",
+       "        [-0.12696936,  2.17129929, -0.15291012, -0.551894  ,\n",
+       "         -0.52109388, -0.81843193]],\n",
+       "\n",
+       "       [[ 0.16039074, -1.44657465, -1.27536931,  0.65510209,\n",
+       "          1.0191536 ,  0.88729753],\n",
+       "        [ 0.38452954, -1.83619995, -0.81036734,  0.48144589,\n",
+       "          0.83212498,  0.94846688],\n",
+       "        [ 0.60465191, -1.93215371,  0.10576577, -0.22754724,\n",
+       "          0.09694625,  1.35233701],\n",
+       "        ...,\n",
+       "        [-1.44317161, -0.24425712,  1.27242474, -0.99084047,\n",
+       "          1.06936819,  0.33647627],\n",
+       "        [-1.5352493 ,  1.26885501,  0.94431201, -0.00406545,\n",
+       "          0.33917903, -1.0130313 ],\n",
+       "        [ 1.14404547, -0.75381956, -0.52156131,  1.64392236,\n",
+       "         -0.70912632, -0.80346064]],\n",
+       "\n",
+       "       [[-1.936554  ,  1.42140471,  0.45381007,  0.11625398,\n",
+       "          0.03735331, -0.09226807],\n",
+       "        [-1.98049024,  1.37586547,  0.40344261,  0.04052157,\n",
+       "          0.01975477,  0.14090581],\n",
+       "        [-1.98750079,  1.35986027,  0.4135427 ,  0.02110713,\n",
+       "          0.02391828,  0.16907242],\n",
+       "        ...,\n",
+       "        [-1.51500211,  1.49813574,  1.04597407, -0.43558748,\n",
+       "         -0.31136435, -0.28215588],\n",
+       "        [-1.50361332,  1.41447524,  1.16233062, -0.40421652,\n",
+       "         -0.34541701, -0.323559  ],\n",
+       "        [-1.51303988,  1.44619178,  1.11791248, -0.37851347,\n",
+       "         -0.33008998, -0.34246093]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 0.83698227, -1.87230441, -0.80537457,  0.51094757,\n",
+       "          0.65697358,  0.67277556],\n",
+       "        [ 1.33358967, -1.62933075, -0.97996334,  0.22190277,\n",
+       "          0.49526251,  0.55853914],\n",
+       "        [ 1.75967125, -1.35988076, -0.94359262, -0.02725247,\n",
+       "          0.27778104,  0.29327356],\n",
+       "        ...,\n",
+       "        [ 1.92745118, -1.11128474, -0.98773166,  0.25276133,\n",
+       "          0.01931699, -0.1005131 ],\n",
+       "        [ 1.52896356, -1.57553195, -0.90358306,  0.51406462,\n",
+       "          0.26364422,  0.17244261],\n",
+       "        [ 0.98644142, -1.83696731, -0.82501255,  0.70974885,\n",
+       "          0.51222522,  0.45356436]],\n",
+       "\n",
+       "       [[-0.51149109, -1.21907431,  2.05314339, -0.13270996,\n",
+       "         -0.11942964, -0.07043839],\n",
+       "        [-0.79602178, -1.25633788,  1.93643493,  0.11028792,\n",
+       "         -0.11120988,  0.11684669],\n",
+       "        [-0.98567998, -1.41513994,  1.68616577,  0.3170386 ,\n",
+       "          0.15946049,  0.23815506],\n",
+       "        ...,\n",
+       "        [-0.78680011, -1.54459957, -0.39933832,  0.43840986,\n",
+       "          1.05644414,  1.235884  ],\n",
+       "        [-1.57936921, -1.16130807,  0.74102455,  0.24893343,\n",
+       "          0.95709766,  0.79362163],\n",
+       "        [-1.45551957, -0.97619543,  1.61813514,  0.0647237 ,\n",
+       "          0.48748116,  0.261375  ]],\n",
+       "\n",
+       "       [[ 1.33200956, -1.33901125, -1.34854366,  0.42052725,\n",
+       "          0.47884082,  0.45617727],\n",
+       "        [ 1.29104074, -1.34970261, -1.35136583,  0.35237097,\n",
+       "          0.55918344,  0.49847329],\n",
+       "        [ 1.39261741, -1.39043219, -1.24045086,  0.18570997,\n",
+       "          0.51700863,  0.53554703],\n",
+       "        ...,\n",
+       "        [-1.15264879, -1.61792287,  0.79392084,  0.77749236,\n",
+       "          0.82310907,  0.37604939],\n",
+       "        [-0.56978264, -1.77790497, -0.31578437,  0.98377919,\n",
+       "          0.97433884,  0.70535395],\n",
+       "        [ 0.41964112, -1.5916963 , -1.19292453,  0.81736388,\n",
+       "          0.80291288,  0.74470295]]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " data_normalize(trainX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "9cc201c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.86694215, -0.42319457, -2.04079836,  0.58293322,\n",
+       "          0.34826429,  0.66585326],\n",
+       "        [ 1.10934004, -1.3717763 , -1.39942412,  0.51996875,\n",
+       "          0.51229074,  0.6296009 ],\n",
+       "        [ 0.73998227, -2.06507162, -0.33559405,  0.39460864,\n",
+       "          0.87603269,  0.39004206],\n",
+       "        ...,\n",
+       "        [ 1.188583  , -2.06600311,  0.50654114,  0.2280489 ,\n",
+       "          0.07887022,  0.06395985],\n",
+       "        [ 1.18614632, -2.09112591,  0.32007846,  0.23568247,\n",
+       "          0.19986837,  0.14935029],\n",
+       "        [ 1.32568339, -2.00397083, -0.11023704,  0.32445833,\n",
+       "          0.25996453,  0.20410163]],\n",
+       "\n",
+       "       [[ 0.17770272, -1.72677478, -0.94419203,  0.76599595,\n",
+       "          0.77227041,  0.95499772],\n",
+       "        [ 0.39318332, -1.8850415 , -0.76447636,  0.74864048,\n",
+       "          0.82653839,  0.68115567],\n",
+       "        [ 0.51929962, -1.76324835, -0.97617496,  0.79480525,\n",
+       "          0.81484502,  0.61047343],\n",
+       "        ...,\n",
+       "        [ 0.4331591 , -1.1572598 , -1.59117093,  1.07722909,\n",
+       "          0.53387185,  0.70417069],\n",
+       "        [ 0.41248506, -1.22843367, -1.55761044,  0.83069466,\n",
+       "          0.68661579,  0.8562486 ],\n",
+       "        [ 0.34353427, -1.42857263, -1.34996712,  0.64533536,\n",
+       "          0.87439105,  0.91527907]],\n",
+       "\n",
+       "       [[ 0.27653111, -1.86554645, -0.75908478,  0.64377734,\n",
+       "          0.86334098,  0.84098181],\n",
+       "        [-0.66390723, -1.94726276,  0.8687003 ,  0.59497952,\n",
+       "          0.55983047,  0.58765971],\n",
+       "        [-0.92053646, -1.78942032,  0.9176933 ,  0.71749688,\n",
+       "          0.44776421,  0.62700239],\n",
+       "        ...,\n",
+       "        [ 0.88952798, -1.69072048, -1.07789022,  0.54664139,\n",
+       "          0.69655308,  0.63588826],\n",
+       "        [ 0.75054322, -1.80671969, -0.9229641 ,  0.5983137 ,\n",
+       "          0.75847729,  0.62234959],\n",
+       "        [ 0.4920003 , -1.89276849, -0.7724979 ,  0.76670259,\n",
+       "          0.67529212,  0.73127138]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-0.48284468,  1.50581775,  1.30109706, -0.75685008,\n",
+       "         -0.83656748, -0.73065256],\n",
+       "        [-0.31832583,  1.75923427,  0.94754457, -0.85000039,\n",
+       "         -0.77061426, -0.76783835],\n",
+       "        [ 0.27447867,  2.00965682,  0.08753015, -0.82440933,\n",
+       "         -0.74510088, -0.80215543],\n",
+       "        ...,\n",
+       "        [-0.38668812,  1.75304893,  0.9714409 , -0.86346236,\n",
+       "         -0.76155017, -0.71278918],\n",
+       "        [-0.66551931,  1.70575212,  1.05845723, -0.81305554,\n",
+       "         -0.50197217, -0.78366233],\n",
+       "        [-0.34327791,  2.20645951, -0.7418142 , -0.37767524,\n",
+       "         -0.22313364, -0.52055852]],\n",
+       "\n",
+       "       [[ 1.89580713, -1.01545634,  0.71380736, -0.60026272,\n",
+       "         -0.42274061, -0.57115482],\n",
+       "        [ 2.01587423, -0.82555899,  0.52245011, -0.59082503,\n",
+       "         -0.52034956, -0.60159075],\n",
+       "        [ 2.07079735, -0.72200163,  0.40553292, -0.57857476,\n",
+       "         -0.58053936, -0.59521453],\n",
+       "        ...,\n",
+       "        [ 1.35924721, -1.29814133,  1.34413852, -0.43305377,\n",
+       "         -0.47101423, -0.50117639],\n",
+       "        [ 1.35812068, -1.24022746,  1.37025348, -0.49464203,\n",
+       "         -0.46888676, -0.5246179 ],\n",
+       "        [ 1.43385272, -1.13069987,  1.32993171, -0.57665758,\n",
+       "         -0.47203121, -0.58439576]],\n",
+       "\n",
+       "       [[ 1.58463949, -1.51836824, -0.95362993,  0.25767182,\n",
+       "          0.24622138,  0.38346548],\n",
+       "        [ 1.34951927, -1.92780633, -0.38276842,  0.33420312,\n",
+       "          0.25143764,  0.37541472],\n",
+       "        [ 1.46196476, -1.81448374, -0.54070348,  0.25849421,\n",
+       "          0.38696401,  0.24776424],\n",
+       "        ...,\n",
+       "        [ 1.16095099, -1.55249306, -1.1850727 ,  0.60125913,\n",
+       "          0.47373272,  0.50162292],\n",
+       "        [ 1.21514498, -1.56734244, -1.14252952,  0.45784206,\n",
+       "          0.60300651,  0.4338784 ],\n",
+       "        [ 1.20421602, -1.62063799, -1.05931393,  0.3462461 ,\n",
+       "          0.71220728,  0.41728251]]])"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " data_normalize(testX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "8586dd08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save('trainX.npy', trainX)\n",
+    "save('testX.npy', testX)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3625686d",
+   "id": "9072051d",
    "metadata": {},
    "outputs": [],
    "source": []
